--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -52,7 +52,7 @@ h4{
     background-color:white ;
 }
 .msg{
-    background: color #1EA896; ;
+    background: color #1EA896; 
 }
 .msg h2{
     background-color: #1EA896;
