--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,81 +1,105 @@
-#content{
-    max-width: 1600px;
-    margin: 0 auto;
+body{
+    width: 1600px
+    background-color: #1EA896 ;
+    margin:0 auto;
+    text-align:center 
+    
+}
+    
+header{
+    background-color:#1EA896 ;
+    color:white ;
+    align-items: center;
 }
 
-nav a{ 
-    text-align: center;
+nav a{
     color: #1EA896;
+    text-align: center;
     text-decoration: none;
 }
-#hero-msg h1,
-#hero-msg h4{
-    text-align: center;
+
+nav a:hover{
+    background-color: #1EA896;
+    color: aqua;
 }
 
+.book:hover,.join:hover{
+    background-color: black;
+    color: aquamarine;
+    text-decoration: none;
+}
+#hero{
+    display: flex;
+    justify-content: space-between
+    align-items:center;
+    padding: ;
+}
+#hero.msg{
+    text-align: center
+}
+#hero-img{text-align: center;
+    width: 100%;
+}
+    
 .button-box{
     text-align: center;
 }
 
-main section{
-    text-align: center;
+background{
+    height: 725px;
 }
 
+.home-grid{
+    display: flex;
+    flex-wrap: wrap;
+}
 
-body{
-    background-color: #1ea896 ;
-}
-header{
-    background-color:#1EA896 ;
-}
-nav a:hover{
-    background-color: black;
-}
-.book, .join{
-    background-color:#1EA896 ;
-    color: #8af3ff;
-}
-.home-title{
+.rivers-card, .camping-card, .rapids-card{
     background-color: #1EA896;
-    color: #8af3ff;
-}
-h4{
-    background-color: #1EA896;
-    color: #8af3ff;
+    align-content: center;
 }
 
-.book.hover, .join.hover{
-    background-color:#1EA896 ;
-    color: #8af3ff;
+.rivers-card h2,.camping-card h2,.rapids-card h2{
+    margin-top: 0%;
 }
-#background{
-    background-color:white ;
+.card-img{
+    width: ;
+    height: ;
+}
+
+.icon{
+    width: 80px;
+    
+}
+.logo{
+    width: 80%;
 }
 .msg{
-    background: color #1EA896; 
-}
-.msg h2{
     background-color: #1EA896;
-    color: #8af3ff;
-}
-.msg p{
-    background-color: #1EA896;
-    color: #8af3ff;
+
+    .msg h2{
+        color: white;
+    }
+
+    .msg p{
+        color: white;
+    }
 }
 footer{
     background-color: #1EA896;
-    color: #8af3ff;
+    color: white;
+    text-align: center;
 }
-   footer a:hover{
-    background-color: #1EA896;
-    color: #8af3ff
-   }
-   footer p{
-    font-size: 1.2em;
-   }
+footer a{
+    color: aqua;
+    text-decoration: none;
+}
+footer a:hover{
+    color: black;
+}
+footer p{
+    font-size: 1.2em
+}
 footer p.a:hover{
-    text-decoration: underline;
+    text-decoration: underline
 }
-   .icon{
-    width:100%
-   }
