--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -10,7 +10,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #113f77;
 }
 
 .logo {
@@ -99,7 +99,7 @@ footer {
 }
 
 .footer-links a {
-    color: #fff;
+    color: #165872;
     margin: 0 10px;
     text-decoration: none;
 }
