--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,8 @@
 /* Resetting default margin and padding */
 body, h1, h2, h3, h4, h5, h6, p, img {
+  background-color:#fcfbfb ;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 22px;
     margin: 0;
     padding: 0;
 }
@@ -41,7 +44,8 @@ nav a {
 }
 
 .home-title {
-    font-size: 48px;
+   font-family:'Times New Roman', Times, serif;
+    font-size: 2em;
     margin-bottom: 10px;
 }
 
@@ -55,6 +59,32 @@ nav a {
     color: white;
     text-decoration: none;
     border-radius: 5px;
+}
+.book, .join{
+    background-color: #d9c2a3;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+   margin-top: 50px;
+   border-radius: 5px;
+    
+}
+.msg p{
+    font-size:0.8em;
+    padding-bottom: 15px;
+}
+.msg{
+    background-color: #6f7364;
+    line-height: 1.5em;
+    padding-top: 10px;
+}
+
+nav a{
+    text-decoration: none;
+    color: #fcfbfb;
+    text-align: center;
+    padding: 35px;
 }
 
 /* Styling main content */
@@ -70,7 +100,7 @@ nav a {
 .camping-card,
 .rapids-card {
     flex: 1;
-    margin: 10px;
+    margin: 200px 0px;
     padding: 20px;
     background-color: #f0f0f0;
     text-align: center;
@@ -79,9 +109,11 @@ nav a {
 .card-img {
     max-width: 100%;
     height: auto;
+    border: 10px solid#d9c2a3;
 }
 
 .icon {
+    padding-top: 10px;
     max-width: 50px;
     height: auto;
 }
@@ -90,9 +122,11 @@ nav a {
 footer {
     background-color: #5393cb;
     color: white;
-    padding: 20px;
+    padding: 25px 50px;
     text-align: center;
+    margin-top: 200px;
 }
+
 
 .footer-links {
     margin-top: 10px;
@@ -103,9 +137,15 @@ footer {
     margin: 0 10px;
     text-decoration: none;
 }
-
+footer.social img{
+    padding-top: 15px;
+}
 .social img {
     max-width: 30px;
     height: auto;
     margin: 0 5px;
+}
+.moutains{
+    margin:100px 0
+
 }
