--- a/positionstyles.css
+++ b/positionstyles.css
@@ -39,19 +39,13 @@
   grid-template-columns: 50px 50px 50px 50px 50px;
   grid-gap: 10px; 
   margin-top: 20px;
-}
-
-{grid-template-areas:
-    "red2 . . . green2"
-    "red2 . yellow2 . green2"
-    ". . yellow2 . ."
-    ". . . . blue2";
+  position: relative;
 }
 .red2 { 
+ position: relative;
   width: 50px; 
   height: 50px; 
   background-color: red;
- grid-area: red;
 } 
 .green2 { 
   width: 50px; 
@@ -106,7 +100,7 @@ grid-column-gap: 20px; /* Add some gap between columns */
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
-  isplay: grid;
+  display: grid;
   grid-template-columns: 100px 100px; 
   grid-template-rows: 100px 100px; 
   grid-gap: 10px; 
