--- a/positionstyles.css
+++ b/positionstyles.css
@@ -37,35 +37,33 @@
   /* This is the parent of the activity 2 boxes. */
   display: grid;
   grid-template-columns: 50px 50px 50px 50px 50px;
-  grid-gap: 10px; 
-  margin-top: 20px;
-  position: relative;
+ gap: 20px;
 }
 .red2 { 
- position: relative;
   width: 50px; 
   height: 50px; 
   background-color: red;
+  margin-left: -50px;
+  margin-top: -50px;
 } 
 .green2 { 
   width: 50px; 
   height: 50px; 
   background-color: green; 
- grid-area: green;
+ 
  
 } 
 .yellow2 {
   width: 50px; 
   height: 50px; 
   background-color: gold; 
- grid-area: gold;
+
 } 
 .blue2 {
 
   width: 50px; 
   height: 50px; 
   background-color: blue; 
- grid-area: blue;
 } 
 /* Activity 3 styles */ 
 .content3 {
@@ -78,23 +76,26 @@ grid-column-gap: 20px; /* Add some gap between columns */
   width: 100px; 
   height: 100px; 
   background-color: red; 
-  grid-column: 1; 
+  grid-column: 1/3; 
 } 
 .green3 {
   width: 100px; 
   height: 100px; 
   background-color: green;
-  grid-column: 2; 
+  grid-column: 1/2; 
 } 
 .yellow3 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 2/3;
 } 
 .blue3 {
   width: 100px;
   height: 100px; 
   background-color: blue; 
+  grid-column: 1/2;
+  grid-row: 2/3;
 } 
 /* Activity 4 styles */ 
 .content4 {
