--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,6 +9,8 @@ body, h1, h2, h3, h4, h5, h6, p, img {
 
 /* Styling header */
 header {
+display: grid;
+grid-template-columns: 150px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,7 +23,15 @@ header {
     height: auto;
 }
 
+#logo_link{
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
 nav a {
+    display: flex;
+    justify-content: space-around;
     margin-left: 20px;
     text-decoration: none;
     color: #fbfafa;
@@ -29,6 +39,8 @@ nav a {
 
 /* Styling hero section */
 #hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,17 +48,34 @@ nav a {
     background-size: cover;
     padding: 50px;
     color: white;
+    margin-top: -100px;
+    margin-top: 0;
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
 }
 
 #hero-msg {
     flex: 1;
     padding-left: 30px;
+    color: white;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    margin-top: 0;
 }
 
-.home-title {
+#hero-msg h4 {
+    display: none;
+}
+.home-title {    
    font-family:'Times New Roman', Times, serif;
-    font-size: 2em;
+    font-size: 25px;
     margin-bottom: 10px;
+    color: #6f7364;
 }
 
 .button-box {
@@ -78,6 +107,8 @@ nav a {
     background-color: #6f7364;
     line-height: 1.5em;
     padding-top: 10px;
+    grid-column: 6/10;
+    grid-row: 6/7;
 }
 
 nav a{
@@ -85,6 +116,8 @@ nav a{
     color: #fcfbfb;
     text-align: center;
     padding: 35px;
+    display: block;
+    padding: 15px;
 }
 
 /* Styling main content */
@@ -100,16 +133,44 @@ nav a{
 .camping-card,
 .rapids-card {
     flex: 1;
-    margin: 200px 0px;
+    margin: 50pxpx auto;
+    width: 60%;
     padding: 20px;
     background-color: #f0f0f0;
     text-align: center;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+    display: none;
 }
 
 .card-img {
     max-width: 100%;
     height: auto;
     border: 10px solid#d9c2a3;
+    width: 100%;
+    transition: transform 0.5s;
+    box-shadow: 5px 5px 10px #6f7364;
+
+}
+.card-img:hover{
+    opacity: 0.6;
+    transform: scale(1.1);
 }
 
 .icon {
@@ -125,6 +186,10 @@ footer {
     padding: 25px 50px;
     text-align: center;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
 }
 
 
@@ -146,6 +211,15 @@ footer.social img{
     margin: 0 5px;
 }
 .moutains{
-    margin:100px 0
-
+    margin:100px 0;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
