--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -182,7 +182,7 @@ nav a{
 /* Styling footer */
 footer {
     background-color: #5393cb;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 25px 50px;
     text-align: center;
     margin-top: 200px;
@@ -218,7 +218,7 @@ footer.social img{
     box-shadow: 5px 5px 10px #6f7364;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) 
     #hero, .home-grid {
         display: block;
         height: auto;
