--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -218,7 +218,7 @@ footer.social img{
     box-shadow: 5px 5px 10px #6f7364;
 }
 
-@media screen and (max-width: 900px) 
+@media screen and (max-width: 900px) {}
     #hero, .home-grid {
         display: block;
         height: auto;
