--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -143,15 +143,18 @@ nav a{
 .rivers-card {
     grid-column: 2/4;
     grid-row: 2/3;
+    display: center;
 }
 
 .camping-card {
     grid-column: 5/7;
     grid-row: 2/3;
+    display: center;
 }
 .rapids-card {
     grid-column: 8/10;
     grid-row: 2/3;
+    display: center;
 }
 #background {
     grid-column: 1/11;
@@ -182,10 +185,10 @@ nav a{
 /* Styling footer */
 footer {
     background-color: #5393cb;
-    color: rgb(255, 255, 255);
+    color: rgb(15, 14, 14);
     padding: 25px 50px;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -218,8 +221,45 @@ footer.social img{
     box-shadow: 5px 5px 10px #6f7364;
 }
 
-@media screen and (max-width: 900px) {}
+@media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
         height: auto;
     }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
