--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -105,10 +105,10 @@ nav a {
 }
 .msg{
     background-color: #6f7364;
-    line-height: 1.5em;
-    padding-top: 10px;
+    padding-top: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 nav a{
@@ -143,36 +143,25 @@ nav a{
 .rivers-card {
     grid-column: 2/4;
     grid-row: 2/3;
-    display: center;
 }
 
 .camping-card {
     grid-column: 5/7;
     grid-row: 2/3;
-    display: center;
+
 }
 .rapids-card {
     grid-column: 8/10;
     grid-row: 2/3;
-    display: center;
-}
-#background {
-    grid-column: 1/11;
-    grid-row: 4/9;
-    display: none;
 }
 
 .card-img {
-    max-width: 100%;
-    height: auto;
-    border: 10px solid#d9c2a3;
-    width: 100%;
-    transition: transform 0.5s;
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
-
 }
 .card-img:hover{
-    opacity: 0.6;
+    opacity: .6;
     transform: scale(1.1);
 }
 
@@ -184,15 +173,12 @@ nav a{
 
 /* Styling footer */
 footer {
-    background-color: #5393cb;
-    color: rgb(15, 14, 14);
+    background-color: #6f7364;
     padding: 25px 50px;
-    text-align: center;
-    margin-top: 20px;
+    margin-top: 200px; 
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-direction: column;
 }
 
 
@@ -214,7 +200,7 @@ footer.social img{
     margin: 0 5px;
 }
 .moutains{
-    margin:100px 0;
+    margin:100px;
     width: 100%;
     grid-column: 2/7;
     grid-row: 5/8;
@@ -260,6 +246,7 @@ footer.social img{
     }
     footer {
         margin-top: 25px;
+        
     }
 }
             
