--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,143 +1,42 @@
-/* Resetting default margin and padding */
-body, h1, h2, h3, h4, h5, h6, p, img {
-  background-color:#fcfbfb ;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 22px;
-    margin: 0;
-    padding: 0;
-}
-
-/* Styling header */
 header {
-display: grid;
-grid-template-columns: 150px auto;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #113f77;
+    justify-content: space-around;
 }
 
-.logo {
-    max-width: 100px;
-    height: auto;
-}
-
-#logo_link{
+#logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
 }
 
-nav a {
-    display: flex;
-    justify-content: space-around;
-    margin-left: 20px;
-    text-decoration: none;
-    color: #fbfafa;
-}
-
-/* Styling hero section */
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: url('images/hero-bg.jpg') no-repeat center center;
-    background-size: cover;
-    padding: 50px;
-    color: white;
     margin-top: -100px;
-    margin-top: 0;
 }
 
-#hero-box{
+#hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
 }
 
-#hero-msg {
-    flex: 1;
-    padding-left: 30px;
-    color: white;
-    grid-column: 2/3;
-    grid-row: 1/2;
-    margin-top: 100px;
-    margin-top: 0;
-}
-
 #hero-msg h4 {
-    display: none;
-}
-.home-title {    
-   font-family:'Times New Roman', Times, serif;
-    font-size: 25px;
-    margin-bottom: 10px;
-    color: #6f7364;
-}
-
-.button-box {
-    margin-top: 20px;
-}
-
-.book {
-    padding: 10px 20px;
-    background-color: #3498db;
     color: white;
-    text-decoration: none;
-    border-radius: 5px;
-}
-.book, .join{
-    background-color: #d9c2a3;
-    color: black;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 15px 30px;
-   margin-top: 50px;
-   border-radius: 5px;
-    
-}
-.msg p{
-    font-size:0.8em;
-    padding-bottom: 15px;
-}
-.msg{
-    background-color: #6f7364;
-    padding-top: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
 }
 
-nav a{
-    text-decoration: none;
-    color: #fcfbfb;
-    text-align: center;
-    padding: 35px;
-    display: block;
-    padding: 15px;
+.main-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 
-/* Styling main content */
-.home-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: stretch;
-    margin: 20px;
-}
-
-.rivers-card,
-.camping-card,
-.rapids-card {
-    flex: 1;
-    margin: 50pxpx auto;
-    width: 60%;
-    padding: 20px;
-    background-color: #f0f0f0;
-    text-align: center;
+.card-img, .mountains {
+    width: 100%;
 }
 
 .rivers-card {
@@ -148,105 +47,33 @@ nav a{
 .camping-card {
     grid-column: 5/7;
     grid-row: 2/3;
-
 }
+
 .rapids-card {
     grid-column: 8/10;
     grid-row: 2/3;
 }
 
-.card-img {
-    border: 10px solid #d9c2a3;
-    transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.card-img:hover{
-    opacity: .6;
-    transform: scale(1.1);
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
-.icon {
-    padding-top: 10px;
-    max-width: 50px;
-    height: auto;
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
 }
 
-/* Styling footer */
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+}
+
 footer {
     background-color: #6f7364;
     padding: 25px 50px;
-    margin-top: 200px; 
+    margin-top: 200px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-
-
-.footer-links {
-    margin-top: 10px;
-}
-
-.footer-links a {
-    color: #165872;
-    margin: 0 10px;
-    text-decoration: none;
-}
-footer.social img{
-    padding-top: 15px;
-}
-.social img {
-    max-width: 30px;
-    height: auto;
-    margin: 0 5px;
-}
-.moutains{
-    margin:100px;
-    width: 100%;
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-
-@media screen and (max-width: 900px) {
-    #hero, .home-grid {
-        display: block;
-        height: auto;
-    }
-    nav, footer {
-        flex-direction: column;
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-    }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: #6f7364;
-    }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
-    }
-    footer {
-        margin-top: 25px;
-        
-    }
-}
-            
