--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -90,7 +90,7 @@ nav a {
 .button-box a {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #223542;
+    background-color: #ffffff;
     color: #f9f4f4;
     text-decoration: none;
     font-weight: bold;
@@ -124,7 +124,7 @@ nav a {
     display: inline-block;
     margin:  20px;
     padding: 20px;
-    background-color: #6f7364;
+    background-color: #ffffff;
     border-radius: 5px;
     justify-items: center;
     text-align: center;
