--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -154,6 +154,7 @@ nav a {
     height: auto;
     width: 40px;
     height: 40px;
+    color: white;
 }
 
 /* Style the "More Than Just The Thrill" section */
