--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -99,7 +99,7 @@ nav a {
 }
 .book{
     background-color: #f00;
-    color: #fff;
+    color: #3467b4;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
