--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -144,12 +144,12 @@ nav a:hover {
 .sm-home {
   grid-area: home;
   background-color: #ccc;
-  line-height: 3em;
+  line-height: 1em;
 }
 .sm-page2 {
   grid-area: page2;
   background-color: #ccc;
-  line-height: 3em;
+  line-height: 2em;
 }
 .sm-page3 {
   grid-area: page3;
@@ -159,12 +159,12 @@ nav a:hover {
 .sm-page4{
   grid-area: page4;
   background-color: #ccc;
-  line-height: 3em;
+  line-height: 4em;
 }
 .sm-page5{
   grid-area: page5;
   background-color: #ccc;
-  line-height: 3em;
+  line-height: 5em;
 }
 .top {
   grid-area: top;
@@ -184,8 +184,8 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
-.right {
-  grid-area: right;
+.bottom{
+  grid-area: bottom;
   border-top: 1px solid;
   border-right: 1px solid;
 }
