--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -142,29 +142,37 @@ nav a:hover {
 
 }
 .sm-home {
-  grid-area: home;
+  grid-area: home; 
   background-color: #ccc;
   line-height: 1em;
+  text-align: center;
 }
 .sm-page2 {
   grid-area: page2;
   background-color: #ccc;
-  line-height: 2em;
+  line-height: 1em;
+grid-auto-columns: 0 em
+  text-align: center;
 }
 .sm-page3 {
   grid-area: page3;
   background-color: #ccc;
-  line-height: 3em;
+  line-height: 1em;
+
 }
 .sm-page4{
   grid-area: page4;
   background-color: #ccc;
-  line-height: 4em;
+  line-height: 1em;
+  
+
 }
 .sm-page5{
   grid-area: page5;
   background-color: #ccc;
-  line-height: 5em;
+  line-height: 1em;
+  grid-template-areas: none;
+ 
 }
 .top {
   grid-area: top;
