--- a/personal-folder/styles/site-plan.css
+++ b/personal-folder/styles/site-plan.css
@@ -33,7 +33,7 @@ Fonts are separated by a | */
 
 body {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 50 ;
   padding: 4em;
   font-size: 18px;
   text-align: center;
